 - Changed 'SyntaxColoring' extension name to 'FileSystem Syntax Coloring' (more descriptive)
 - Added <wikitext> section support in 'FileSystem SyntaxColoring' extension (for NS_FILESYSTEM namespace)
 - Integrated 'GeSHi' syntax highlighter extension
 -- Added 'SyntaxHighlight' hook
 - Fixed 'delete' and 'protect' namespace level policy in Special:Log
 - Added 'FormProc' extension
 - Added 'SpecialPagesManager' extension
 - Added 'SecureHTML' extension
 - Added 'SecureProperties' extension
 - Added 'AddScriptCss' extension
 - Added 'ParserTools' extension
==========
REL1_10_4:
- Added 'AutoLanguage' extension
- Added 'ParserPhase2' extension
- Added 'source' tag to geshi extension
- Adjusted 'revision id' information provided through extension credits (Special:Version) on most extensions
- Fixed 'SidebarEx' extension for 'garbage' appearing when 'Sidebar/$group' page does not exist
- Added 'undelete' as namespace independant right for addressing 'Special:Undelete' use-cases
- Fixed 'Pager.php' to support 'page_namespace' related queries as well as 'user' table related ones
-- Addresses 'Special:Listusers' special page issue
- Enhanced 'SpecialPagesManager' extension with a standard MW special for updating the
  BizzWiki special pages by reading the filesystem '/SpecialPages' directory.
=========
REL1_10_5:
- FileManager: Added PHP error suppression for file_get_contents upon initial page creation
- FormProc: added functionality enabling defining a class for form processing
- Added BizzWiki release identifier in global define 'BIZZWIKI'
- SecureHTML: added namespace exemption list functionality
- SecureProperties: added namespace exemption list functionality
- Corrected geshi, extensionclass, addscriptcss for PHP warnings (usage of deprecated PHP features)
- Adjusted 'url' field in extensions' credits
- ParserPhase2: Fixed client side caching logic due to a bug in PHP's preg_match_all function